# playbook

template/cpp/: Makefile
template/cpp-cmake/: CMakeLists.txt
template/cpp-cmake/src/: main.cpp  pb.cpp
template/cpp/include/: pb.h
template/cpp/src/: main.cpp  pb.cpp
template/cpp/test/: test.cpp
template/go/: Makefile  go.mod  main.go
template/go/pb/: pb.go
template/py/: main.py  pb.py
